--- a/public/design/default.css
+++ b/public/design/default.css
@@ -1,4 +1,17 @@
 @charset "UTF-8";
+@font-face {
+  font-family: DiabloHeavy;
+  src: url(../fonts/Diablo\ Heavy.ttf);
+}
+@font-face {
+  font-family: DiabloLight;
+  src: url(../fonts/DiabloLight.ttf);
+}
+@font-face {
+  font-family: "Old Fenris";
+  src: url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.eot");
+  src: url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.woff") format("woff"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.svg#Old Fenris") format("svg");
+}
 /*!
  * Bootstrap  v5.2.3 (https://getbootstrap.com/)
  * Copyright 2011-2022 The Bootstrap Authors
@@ -37,6 +50,8 @@
   --bs-danger: #dc3545;
   --bs-light: #f8f9fa;
   --bs-dark: #212529;
+  --bs-color1: rgb(158, 0, 0);
+  --bs-color2: rgb(88, 83, 83);
   --bs-primary-rgb: 13, 110, 253;
   --bs-secondary-rgb: 108, 117, 125;
   --bs-success-rgb: 25, 135, 84;
@@ -45,6 +60,8 @@
   --bs-danger-rgb: 220, 53, 69;
   --bs-light-rgb: 248, 249, 250;
   --bs-dark-rgb: 33, 37, 41;
+  --bs-color1-rgb: 158, 0, 0;
+  --bs-color2-rgb: 88, 83, 83;
   --bs-white-rgb: 255, 255, 255;
   --bs-black-rgb: 0, 0, 0;
   --bs-body-color-rgb: 33, 37, 41;
@@ -2937,6 +2954,40 @@ textarea.form-control-lg {
   --bs-btn-disabled-border-color: #212529;
 }
 
+.btn-color1 {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: rgb(158, 0, 0);
+  --bs-btn-border-color: rgb(158, 0, 0);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #860000;
+  --bs-btn-hover-border-color: #7e0000;
+  --bs-btn-focus-shadow-rgb: 173, 38, 38;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #7e0000;
+  --bs-btn-active-border-color: #770000;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgb(158, 0, 0);
+  --bs-btn-disabled-border-color: rgb(158, 0, 0);
+}
+
+.btn-color2 {
+  --bs-btn-color: #fff;
+  --bs-btn-bg: rgb(88, 83, 83);
+  --bs-btn-border-color: rgb(88, 83, 83);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: #4b4747;
+  --bs-btn-hover-border-color: #464242;
+  --bs-btn-focus-shadow-rgb: 113, 109, 109;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: #464242;
+  --bs-btn-active-border-color: #423e3e;
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: #fff;
+  --bs-btn-disabled-bg: rgb(88, 83, 83);
+  --bs-btn-disabled-border-color: rgb(88, 83, 83);
+}
+
 .btn-outline-primary {
   --bs-btn-color: #0d6efd;
   --bs-btn-border-color: #0d6efd;
@@ -3070,6 +3121,40 @@ textarea.form-control-lg {
   --bs-btn-disabled-color: #212529;
   --bs-btn-disabled-bg: transparent;
   --bs-btn-disabled-border-color: #212529;
+  --bs-gradient: none;
+}
+
+.btn-outline-color1 {
+  --bs-btn-color: rgb(158, 0, 0);
+  --bs-btn-border-color: rgb(158, 0, 0);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(158, 0, 0);
+  --bs-btn-hover-border-color: rgb(158, 0, 0);
+  --bs-btn-focus-shadow-rgb: 158, 0, 0;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(158, 0, 0);
+  --bs-btn-active-border-color: rgb(158, 0, 0);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(158, 0, 0);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(158, 0, 0);
+  --bs-gradient: none;
+}
+
+.btn-outline-color2 {
+  --bs-btn-color: rgb(88, 83, 83);
+  --bs-btn-border-color: rgb(88, 83, 83);
+  --bs-btn-hover-color: #fff;
+  --bs-btn-hover-bg: rgb(88, 83, 83);
+  --bs-btn-hover-border-color: rgb(88, 83, 83);
+  --bs-btn-focus-shadow-rgb: 88, 83, 83;
+  --bs-btn-active-color: #fff;
+  --bs-btn-active-bg: rgb(88, 83, 83);
+  --bs-btn-active-border-color: rgb(88, 83, 83);
+  --bs-btn-active-shadow: inset 0 3px 5px rgba(0, 0, 0, 0.125);
+  --bs-btn-disabled-color: rgb(88, 83, 83);
+  --bs-btn-disabled-bg: transparent;
+  --bs-btn-disabled-border-color: rgb(88, 83, 83);
   --bs-gradient: none;
 }
 
@@ -4685,6 +4770,24 @@ textarea.form-control-lg {
   color: #101214;
 }
 
+.alert-color1 {
+  --bs-alert-color: #5f0000;
+  --bs-alert-bg: #eccccc;
+  --bs-alert-border-color: #e2b3b3;
+}
+.alert-color1 .alert-link {
+  color: #4c0000;
+}
+
+.alert-color2 {
+  --bs-alert-color: #353232;
+  --bs-alert-bg: #dedddd;
+  --bs-alert-border-color: #cdcbcb;
+}
+.alert-color2 .alert-link {
+  color: #2a2828;
+}
+
 @keyframes progress-bar-stripes {
   0% {
     background-position-x: 1rem;
@@ -5087,6 +5190,34 @@ textarea.form-control-lg {
   color: #fff;
   background-color: #141619;
   border-color: #141619;
+}
+
+.list-group-item-color1 {
+  color: #5f0000;
+  background-color: #eccccc;
+}
+.list-group-item-color1.list-group-item-action:hover, .list-group-item-color1.list-group-item-action:focus {
+  color: #5f0000;
+  background-color: #d4b8b8;
+}
+.list-group-item-color1.list-group-item-action.active {
+  color: #fff;
+  background-color: #5f0000;
+  border-color: #5f0000;
+}
+
+.list-group-item-color2 {
+  color: #353232;
+  background-color: #dedddd;
+}
+.list-group-item-color2.list-group-item-action:hover, .list-group-item-color2.list-group-item-action:focus {
+  color: #353232;
+  background-color: #c8c7c7;
+}
+.list-group-item-color2.list-group-item-action.active {
+  color: #fff;
+  background-color: #353232;
+  border-color: #353232;
 }
 
 .btn-close {
@@ -6645,6 +6776,16 @@ textarea.form-control-lg {
   background-color: RGBA(33, 37, 41, var(--bs-bg-opacity, 1)) !important;
 }
 
+.text-bg-color1 {
+  color: #fff !important;
+  background-color: RGBA(158, 0, 0, var(--bs-bg-opacity, 1)) !important;
+}
+
+.text-bg-color2 {
+  color: #fff !important;
+  background-color: RGBA(88, 83, 83, var(--bs-bg-opacity, 1)) !important;
+}
+
 .link-primary {
   color: #0d6efd !important;
 }
@@ -6699,6 +6840,20 @@ textarea.form-control-lg {
 }
 .link-dark:hover, .link-dark:focus {
   color: #1a1e21 !important;
+}
+
+.link-color1 {
+  color: rgb(158, 0, 0) !important;
+}
+.link-color1:hover, .link-color1:focus {
+  color: #7e0000 !important;
+}
+
+.link-color2 {
+  color: rgb(88, 83, 83) !important;
+}
+.link-color2:hover, .link-color2:focus {
+  color: #464242 !important;
 }
 
 .ratio {
@@ -7160,6 +7315,16 @@ textarea.form-control-lg {
 .border-dark {
   --bs-border-opacity: 1;
   border-color: rgba(var(--bs-dark-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-color1 {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-color1-rgb), var(--bs-border-opacity)) !important;
+}
+
+.border-color2 {
+  --bs-border-opacity: 1;
+  border-color: rgba(var(--bs-color2-rgb), var(--bs-border-opacity)) !important;
 }
 
 .border-white {
@@ -8024,6 +8189,16 @@ textarea.form-control-lg {
   color: rgba(var(--bs-dark-rgb), var(--bs-text-opacity)) !important;
 }
 
+.text-color1 {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-color1-rgb), var(--bs-text-opacity)) !important;
+}
+
+.text-color2 {
+  --bs-text-opacity: 1;
+  color: rgba(var(--bs-color2-rgb), var(--bs-text-opacity)) !important;
+}
+
 .text-black {
   --bs-text-opacity: 1;
   color: rgba(var(--bs-black-rgb), var(--bs-text-opacity)) !important;
@@ -8113,6 +8288,16 @@ textarea.form-control-lg {
 .bg-dark {
   --bs-bg-opacity: 1;
   background-color: rgba(var(--bs-dark-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-color1 {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-color1-rgb), var(--bs-bg-opacity)) !important;
+}
+
+.bg-color2 {
+  --bs-bg-opacity: 1;
+  background-color: rgba(var(--bs-color2-rgb), var(--bs-bg-opacity)) !important;
 }
 
 .bg-black {
@@ -10776,6 +10961,15 @@ html, body {
 .card-img-top {
   height: auto;
   width: 25%;
+}
+
+body {
+  background: #0b0c11 url(../src/img/bg.webp) no-repeat 50% top;
+  font-family: "Old Fenris";
+}
+
+h1, .h1, h2, .h2, h3, .h3, .btn, .label, .alert {
+  font-family: DiabloLight;
 }
 
 /*# sourceMappingURL=default.css.map */
