Admin page : Gestion des utilisateurs : rang, suppression et effacement du contenu liés

--- a/public/design/default.css
+++ b/public/design/default.css
@@ -10972,8 +10972,8 @@ h1, .h1, h2, .h2, h3, .h3, .btn, .label, .alert {
   font-family: DiabloLight;
 }
 
-.container {
-  height: 100%;
+.containerCenter {
+  margin-top: 22vh;
 }
 
 /*# sourceMappingURL=default.css.map */
