--- a/public/design/default.scss
+++ b/public/design/default.scss
@@ -60,8 +60,10 @@ h1,h2,h3,.btn,.label,.alert {
     font-family: DiabloLight;
 }
 
-.container {
-    height: 100%;
+// .container {
+//     height: 100%;
+// }
+.containerCenter {
+    margin-top: 22vh;
 }
-
  
