ajout palette de couleurs, margin supplémentaire...

--- a/public/design/default.scss
+++ b/public/design/default.scss
@@ -12,21 +12,44 @@
 @font-face {
     font-family: "Old Fenris";
     src: url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.eot");
-    src: url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.woff") format("woff"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.svg#Old Fenris") format("svg"); }
+    src: url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.eot?#iefix") format("embedded-opentype"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.woff2") format("woff2"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.woff") format("woff"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.ttf") format("truetype"), url("//db.onlinewebfonts.com/t/ce7ee1905f939d4e0f4cfcb3470c4d4e.svg#Old Fenris") format("svg"); 
+}
 
-
+// modifier les couleurs de bases + dérivés
+$blue:    #770200 ; // primary  <---- cette couleur a été modifié pour profiter de tous les comportements (notamment les box-shadow sur les form-control par expl...)
+$red:     #dc3545 ; // danger
+$yellow:  #0c0504 ; // warning  <---- idem
+$green:   #198754 ; // success
+$cyan:    #0dcaf0 ; // info
 
 // Option 2 : ajouter de nouvelles couleurs à B5 sans changer les comportements
-
-$color1: rgb(158, 0, 0);
-$color2: rgb(172, 170, 170);
+// notre palette de couleur diabolique 
+$color1: #770200;
+$color2: #c5c5c5;
+$color3: #6e797f;
+$color4: #0c0504;
 
 // on ajoute tout ça à B5
 $custom-colors: (
     'color1': $color1,
     'color2' : $color2,
+    'color3' : $color3,
+    'color4' : $color4,
 );
 
+// marges/padding <----- on rajoute un peu de marges
+$spacer: 1rem;
+$spacers: (
+    0: 0,
+    1: ($spacer * .25),
+    2: ($spacer * .50),
+    3: ($spacer * 1),
+    4: ($spacer * 1.5),
+    5: ($spacer * 3),
+    6: ($spacer * 4.5),
+    7: ($spacer * 6)
+    
+);
 
 @import "../../vendor/node_modules/bootstrap/scss/functions";
 @import "../../vendor/node_modules/bootstrap/scss/variables";
@@ -59,10 +82,9 @@ body{
 h1,h2,h3,.btn,.label,.alert {
     font-family: DiabloLight;
 }
-
-// .container {
-//     height: 100%;
-// }
+h1,h2,h3,h4,h5,h6 {
+    color: $color1;
+}
 .containerCenter {
     margin-top: 22vh;
 }
