--- a/public/design/default.css
+++ b/public/design/default.css
@@ -11870,4 +11870,8 @@ h1, .h1, h2, .h2, h3, .h3, h4, .h4, h5, .h5, h6, .h6 {
   margin-top: 22vh;
 }
 
+.clip-photo {
+  clip-path: circle(40%);
+}
+
 /*# sourceMappingURL=default.css.map */
